Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-1359

--gen-cob cpp:cob_style does not compile anymore

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.8
    • 0.8
    • Linux/Windows

    Description

      A recent change introduced the concept of "getProcessor" (TProcessor). This code does not take into account when generating cob style C++ (TAsyncProcessor).

      TAsyncProcessor and TProcessor are unrelated, therefore it generates a compilation problem when trying to pass smart pointers around.

      The included patch tries to address this, and was tested on Linux/Windows.

      Attachments

        1. THRIFT-1359.patch
          3 kB
          alexandre parenteau

        Activity

          People

            aubonbeurre alexandre parenteau
            aubonbeurre alexandre parenteau
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 24h
                24h
                Remaining:
                Remaining Estimate - 24h
                24h
                Logged:
                Time Spent - Not Specified
                Not Specified