THRIFT-1359 --gen-cob cpp:cob_style does not compile anymore Patch: Alexandre Parenteau

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1175308 13f79535-47bb-0310-9956-ffa450edef68